@@ -30,22 +30,18 @@ import java.util.List;
 import javax.swing.*;
 
 public class Bootstrap {
-    private static final String URL_boot = "https://robossfactory.alwaysdata.net/launcher_files/bootstrap.json";
-
-    private static final String VERSION = "1.0.4";
-
-    private static final String URL_EXE = "https://robossfactory.alwaysdata.net/launcher_files/ROBOSS%20Games%20Launcher.exe";
-
-    private static final String URL_JAR = "https://robossfactory.alwaysdata.net/launcher_files/ROBOSS%20Games%20Launcher.jar";
-
+    private static final String URL_boot = "https://www.robotboss.org/launcher_files/bootstrap.json";
+    private static final String VERSION = "1.0.7";
+    private static final String URL_EXE = "https://www.robotboss.org/launcher_files/ROBOSS%20Games%20Launcher.exe";
+    private static final String URL_JAR = "https://www.robotboss.org/launcher_files/ROBOSS%20Games%20Launcher.jar";
     private static boolean errored;
 
-    public static void testConnexion() throws IOException{
-
-        URL url = new URL("http://www.google.com");
-        HttpURLConnection urlConn = (HttpURLConnection)url.openConnection();
+    public static void testConnexion() throws IOException {
+        URL url = new URL("https://www.robotboss.org");
+        HttpURLConnection urlConn = (HttpURLConnection) url.openConnection();
+        urlConn.setConnectTimeout(5000);
         urlConn.connect();
-
+        urlConn.disconnect();
     }
 
     private static void copyFile(File src, File dest) throws IOException {
@@ -53,217 +49,168 @@ public class Bootstrap {
     }
 
     public static void main(final String[] args) {
-        System.out.println("[ROBOSS Bootstrap] V"+VERSION);
+        System.out.println("[ROBOSS Bootstrap] V" + VERSION);
         try {
             BootstrapLogger.setup();
         } catch (FileNotFoundException e1) {
-            System.out.println("[ROBOSS Bootstrap][ERROR] "+e1);
+            System.out.println("[ROBOSS Bootstrap][ERROR] " + e1);
             NotificationHelper.sendSystemNotification("Impossible de créer le logger.", TrayIcon.MessageType.ERROR);
-            System.exit(1);
         }
+
         DebugData data = Debugger.debugData();
         System.out.println("[ROBOSS Bootstrap] Starting tray");
         RobossSystemTray.create();
-        System.out.println("[ROBOSS Bootstrap] Checking cpu arch");
+
         if (data.getArch() != null && !data.getArch().contains("64"))
             NotificationHelper.sendSystemNotification("Invalide Configuration", TrayIcon.MessageType.ERROR);
+
         final BootstrapFrame frame = new BootstrapFrame();
         final DistributionOS os = OsCheck.getOperatingSystemType();
+
         System.out.println("[ROBOSS Bootstrap] Starting thread");
-        (new Thread(() -> {
+        new Thread(() -> {
             try {
                 System.out.println("[ROBOSS Bootstrap] Checking jcef sanity");
                 OsCheck.killJcefHelper();
                 long start = System.currentTimeMillis();
-                System.out.println("[ROBOSS Bootstrap] Parsing distribution");
-                    testConnexion();
 
-                LauncherDistribution distribution = JsonOnlineParser.GSON.fromJson(JsonOnlineParser.parse(URL_boot), LauncherDistribution.class);
-                if (distribution == null) {
-                    System.out.println("[ROBOSS Bootstrap] Unable to find update (distribution)");
-                    distribution.version = VERSION;
-                    return;
+                // Attempt connection
+                try {
+                    testConnexion();
+                } catch (IOException e) {
+                    System.out.println("[ROBOSS Bootstrap] Offline mode triggered.");
+                    throw new Exception("Offline");
                 }
+
+                System.out.println("[ROBOSS Bootstrap] Parsing distribution");
+                LauncherDistribution distribution = JsonOnlineParser.GSON.fromJson(JsonOnlineParser.parse(URL_boot), LauncherDistribution.class);
+
+                if (distribution == null) {
+                    System.out.println("[ROBOSS Bootstrap] Distribution is null, attempting local launch.");
+                    throw new Exception("No Distribution");
+                }
+
                 File LinstallDir = new File(OsCheck.getLocal(), "/programs/ROBOSS-Games");
-                System.out.println("[ROBOSS Bootstrap] Checking installDir");
                 File installDir = new File(OsCheck.getAppData(), "ROBOSS-Games");
-                if (!installDir.exists())
-                     installDir.mkdirs();
-                System.out.println("[ROBOSS Bootstrap] Checking bootstrap update");
+                if (!installDir.exists()) installDir.mkdirs();
+
+                // Bootstrap Self-Update Logic
                 File tempLauncherFile = new File(LinstallDir, "bootstrap.temp.exe");
-                if (tempLauncherFile.exists())
+                if (tempLauncherFile.exists()) {
                     try {
                         FileUtils.forceDelete(tempLauncherFile);
                     } catch (Exception e) {
-                        File from = new File(LinstallDir + "/bootstrap.temp.exe");
-                        File to = new File(LinstallDir + "/ROBOSS Games Launcher.exe");
+                        File to = new File(LinstallDir, "ROBOSS Games Launcher.exe");
                         try {
-                            copyFile(from, to);
-                            System.out.println("[ROBOSS Bootstrap] File copied successfully.");
+                            copyFile(tempLauncherFile, to);
                         } catch (IOException ex) {
-                            System.out.println("[ROBOSS Bootstrap][ERROR] "+ex);
+                            System.out.println("[ROBOSS Bootstrap][ERROR] " + ex);
                         }
                     }
+                }
 
                 if (distribution.version != null && !VERSION.equals(distribution.version)) {
-                    System.out.println("[ROBOSS Bootstrap] Outdated bootstrap version : " + VERSION + "/" + distribution.version);
+                    System.out.println("[ROBOSS Bootstrap] Outdated bootstrap: " + VERSION + " -> " + distribution.version);
                     NotificationHelper.sendSystemNotification("Update Available", TrayIcon.MessageType.INFO);
                     if (os == DistributionOS.WINDOWS) {
-                        BootstrapPanel panel = (BootstrapPanel) frame.getContentPane();
-                        if (panel != null)
-                            panel.setProgress(EnumProgress.UPDATING);
+                        updateProgressUI(frame, EnumProgress.UPDATING);
                         if (FileUtil.downloadFile(URL_EXE, tempLauncherFile)) {
-                            Runtime.getRuntime().exec(tempLauncherFile.getAbsolutePath());
-                            System.out.println("[ROBOSS ROBOSS Bootstrap] Running bootstrap update (" + tempLauncherFile.getAbsolutePath() + ")");
+                            new ProcessBuilder(tempLauncherFile.getAbsolutePath()).start();
                             System.exit(0);
-                        } else {
-                            NotificationHelper.sendSystemNotification("Impossible de mettre à jour le bootstrap.", TrayIcon.MessageType.ERROR);
                         }
                     } else {
                         int response = JOptionPane.showConfirmDialog(frame, "Voulez-vous télécharger la mise jour");
                         if (response == 0) {
                             Desktop.getDesktop().browse(new URI(URL_JAR));
-                            System.out.println("[ROBOSS Bootstrap] Browse update url");
                             System.exit(0);
                         }
                     }
                 }
+
+                // Launcher update logic
                 DistributionFile launcher = distribution.launcher.get(os);
-                System.out.println("[ROBOSS Bootstrap] Checking java");
-                System.out.println("[ROBOSS Bootstrap] Checking launcher");
                 if (launcher == null) {
-                    System.out.println("[ROBOSS Bootstrap] Unable to find update (launcher)");
-                    NotificationHelper.sendSystemNotification("Une erreur est survenue lors de la recherche de mise à jour (launcher).", TrayIcon.MessageType.ERROR);
-                    System.exit(1);
+                    NotificationHelper.sendSystemNotification("Launcher non trouvé.", TrayIcon.MessageType.ERROR);
                     return;
                 }
-                try {
-                    testConnexion();
 
-                    File launcherFile = new File(installDir, "launcher.jar");
-                    boolean downloadLauncher;
-                    if (!launcherFile.exists()) {
-                        downloadLauncher = true;
-                    } else {
-                        downloadLauncher = !FileUtil.checkSha1(launcherFile, launcher.sha1);
-                        if (downloadLauncher && !launcherFile.delete()) {
-                            OsCheck.killJava();
-                            NotificationHelper.sendSystemNotification("Mise jour impossible car un autre launcher est ouvert.", TrayIcon.MessageType.ERROR);
-                            Bootstrap.restart(args);
-                            return;
-                        }
-                    }
+                File launcherFile = new File(installDir, "launcher.jar");
+                boolean downloadLauncher = !launcherFile.exists() || !FileUtil.checkSha1(launcherFile, launcher.sha1);
 
-                    if (downloadLauncher) {
-                        System.out.println("[ROBOSS Bootstrap] Downloading " + launcher.url + " at " + launcherFile.getAbsolutePath());
-                        NotificationHelper.sendSystemNotification("Téléchargement de la mise à jour.", TrayIcon.MessageType.INFO);
-                        BootstrapPanel panel = (BootstrapPanel) frame.getContentPane();
-                        if (panel != null)
-                            panel.setProgress(EnumProgress.UPDATING);
-                        if (!FileUtil.downloadFile(launcher.url, launcherFile)) {
-                            System.out.println("[ROBOSS Bootstrap] Unable to download launcher");
-                            NotificationHelper.sendSystemNotification("Une erreur est survenue lors de la mise jour (launcher).", TrayIcon.MessageType.ERROR);
-                            System.exit(1);
-                            return;
-                        }
+                if (downloadLauncher) {
+                    if (launcherFile.exists() && !launcherFile.delete()) {
+                        OsCheck.killJava();
+                        NotificationHelper.sendSystemNotification("Veuillez fermer le launcher ouvert.", TrayIcon.MessageType.ERROR);
+                        restart(args);
+                        return;
                     }
-                    long end = System.currentTimeMillis();
-                    if (end - start < 1000L)
-                        Thread.sleep(1000L);
-                    BootstrapPanel panel = (BootstrapPanel) frame.getContentPane();
-                    ProcessBuilder builder = new ProcessBuilder();
-                    builder.directory(installDir);
-                    List<String> commands = new ArrayList<>();
-                    commands.add("java");
-                    commands.add("-jar");
-                    commands.add(launcherFile.getAbsolutePath());
-                    StringBuilder parsedCommand = new StringBuilder();
-                    for (String cmd : commands)
-                        parsedCommand.append(cmd).append(" ");
-                    System.out.println("[ROBOSS Bootstrap] Running " + parsedCommand);
-                    try {
-                        Process p = builder.command(commands).start();
-                        ProcessLogManager manager = new ProcessLogManager(p);
-                        manager.start();
-                        panel.setProgress(EnumProgress.INITIALIZED);
-                        try {
-                            Thread.sleep(750);
-                            System.exit(0);
-                        } catch (Exception e) {
-                            System.exit(0);
-                        }
-                    } catch (IOException e) {
-                        System.out.println("[ROBOSS Bootstrap][ERROR] "+e);
-                        NotificationHelper.sendSystemNotification("Une erreur est survenue lors de l'éxécution de java.", TrayIcon.MessageType.ERROR);
-                        Bootstrap.restart(args);
-                    } catch (Exception e) {
-                        System.out.println("[ROBOSS Bootstrap][ERROR] "+e);
-                        NotificationHelper.sendSystemNotification("Une erreur est survenue lors de l'éxécution du programme.", TrayIcon.MessageType.ERROR);
-                        System.exit(1);
+                    updateProgressUI(frame, EnumProgress.UPDATING);
+                    if (!FileUtil.downloadFile(launcher.url, launcherFile)) {
+                        throw new Exception("Download failed");
                     }
-                } catch (Exception e) {
-                    System.out.println("[ROBOSS Bootstrap][ERROR] "+e);
-                    NotificationHelper.sendSystemNotification("Une erreur est survenue lors de l'éxécution du programme.", TrayIcon.MessageType.ERROR);
-                    System.exit(1);
                 }
 
-            }catch (Exception d){
-                    try {
-                        Thread.sleep(1000L);
-                    } catch (InterruptedException e) {
-                        throw new RuntimeException(e);
-                    }
+                long end = System.currentTimeMillis();
+                if (end - start < 1000L) Thread.sleep(1000L - (end - start));
+
+                panel(args, frame, installDir, launcherFile);
+
+            } catch (Exception d) {
+                System.out.println("[ROBOSS Bootstrap] Falling back to local files...");
                 File installDir = new File(OsCheck.getAppData(), "ROBOSS-Games");
                 File launcherFile = new File(installDir, "launcher.jar");
 
                 if (!launcherFile.exists()) {
-                    NotificationHelper.sendSystemNotification("Le Launcher n'est pas installer", TrayIcon.MessageType.ERROR);
-                    System.exit(1);
-                }
-
-                BootstrapPanel panel = (BootstrapPanel) frame.getContentPane();
-                ProcessBuilder builder = new ProcessBuilder();
-                builder.directory(installDir);
-                List<String> commands = new ArrayList<>();
-                commands.add("java");
-                commands.add("-jar");
-                commands.add(launcherFile.getAbsolutePath());
-                StringBuilder parsedCommand = new StringBuilder();
-                for (String cmd : commands)
-                    parsedCommand.append(cmd).append(" ");
-                System.out.println("[ROBOSS Bootstrap] Running " + parsedCommand);
-                try {
-                    Process p = builder.command(commands).start();
-                    ProcessLogManager manager = new ProcessLogManager(p);
-                    manager.start();
-                    panel.setProgress(EnumProgress.INITIALIZED);
-                    try {
-                        Thread.sleep(750);
-                        System.exit(0);
-                    } catch (Exception e) {
-                        System.exit(0);
-                    }
-                } catch (IOException e) {
-                    System.out.println("[ROBOSS Bootstrap][ERROR] "+e);
-                    NotificationHelper.sendSystemNotification("Une erreur est survenue lors de l'éxécution de java.", TrayIcon.MessageType.ERROR);
-                    Bootstrap.restart(args);
-                } catch (Exception e) {
-                    System.out.println("[ROBOSS Bootstrap][ERROR] "+e);
-                    NotificationHelper.sendSystemNotification("Une erreur est survenue lors de l'éxécution du programme.", TrayIcon.MessageType.ERROR);
-                    System.exit(1);
+                    NotificationHelper.sendSystemNotification("Le Launcher n'est pas installé.", TrayIcon.MessageType.ERROR);
+                } else {
+                    panel(args, frame, installDir, launcherFile);
                 }
             }
+        }, "ROBOSS-Games-Thread").start();
+    }
 
-        },"ROBOSS-Games-Thread")).start();
+    private static void panel(String[] args, BootstrapFrame frame, File installDir, File launcherFile) {
+        updateProgressUI(frame, EnumProgress.INITIALIZED);
+
+        // Use the current running Java path to ensure consistency
+        String javaPath = System.getProperty("java.home") + File.separator + "bin" + File.separator + "java";
+
+        ProcessBuilder builder = new ProcessBuilder(javaPath, "-jar", launcherFile.getAbsolutePath());
+        builder.directory(installDir);
+        builder.inheritIO(); // Critical: Forwards child logs to your current console/IDE
+
+        System.out.println("[ROBOSS Bootstrap] Spawning process: " + launcherFile.getAbsolutePath());
+
+        try {
+            Process p = builder.start();
+            // Optional: Still use the manager if it handles specific logging logic
+            new ProcessLogManager(p).start();
+
+            Thread.sleep(4000); // Give the jar 4 seconds to start before killing bootstrap
+
+            if (p.isAlive()) {
+                System.exit(0);
+            } else {
+                System.out.println("[ROBOSS Bootstrap] Process died immediately. Exit code: " + p.exitValue());
+                NotificationHelper.sendSystemNotification("Le Launcher a crashé au démarrage.", TrayIcon.MessageType.ERROR);
+            }
+        } catch (Exception e) {
+            System.out.println("[ROBOSS Bootstrap][ERROR] " + e);
+            NotificationHelper.sendSystemNotification("Erreur de lancement Java.", TrayIcon.MessageType.ERROR);
+            restart(args);
+        }
+    }
+
+    private static void updateProgressUI(BootstrapFrame frame, EnumProgress state) {
+        SwingUtilities.invokeLater(() -> {
+            BootstrapPanel panel = (BootstrapPanel) frame.getContentPane();
+            if (panel != null) panel.setProgress(state);
+        });
     }
 
     private static void restart(String[] args) {
-        if (errored) {
-            System.exit(1);
-            return;
-        }
+        if (errored) return;
         errored = true;
         main(args);
     }
-
 }
